@@ -3,3 +3,5 @@
 ^\.Rproj\.user$
 ^packrat/
 ^\.Rprofile$
+
+^R/scripts/$
