@@ -1,16 +1,0 @@
-# main.R
-#
-# Entry point to run the Shiny app.
-
-
-# I no longer have access to the original Powerwave files, but I'll leave
-# this here to show the entire processing workflow.
-#
-# source("R/parse-files.R")
-# 
-# process_data()
-
-
-source("R/run-shiny.R")
-
-run_shiny(debug = FALSE)
